--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,19 +2,27 @@ version: '3.2'
 services:
   mongo:
     image: mongo
+    command: mongod --auth
     ports:
-      "27017:27017"
+      - "27017:27017"
     volumes:
-      - ${PWD}:/data/db
+      - mongodb:/data/db
     restart: unless-stopped
     environment:
-      MONGO_INITDB_ROOT_USERNAME: e34723bbd2c58a9788dd979ebc634ab23d1a61c3
-      MONGO_INITDB_ROOT_PASSWORD: 3fedd179e1057aa86def63972ce29f91ff867fd9
+      MONGO_INITDB_ROOT_USERNAME: ${MONGO_INITDB_ROOT_USERNAME}
+      MONGO_INITDB_ROOT_PASSWORD: ${MONGO_INITDB_ROOT_PASSWORD}
+      MONGODB_DATA_DIR: /data/db
   
   python:
     build:
       context: .
       dockerfile: Dockerfile
+    restart: unless-stopped
+    environment:
+      MONGO_INITDB_ROOT_USERNAME: ${MONGO_INITDB_ROOT_USERNAME}
+      MONGO_INITDB_ROOT_PASSWORD: ${MONGO_INITDB_ROOT_PASSWORD}
     depends_on:
       - mongo
-      
+
+volumes:
+  mongodb:
